hard-gists/7310160/run.log
=== Docker Run Log for 7310160 ===
Started at: Mi 29. Okt 17:05:18 CET 2025

[2025-10-29 17:05:19] START: Running container for 7310160
[2025-10-29 17:05:19] SUCCESS: Container 9c5688c382c84600fdda376991ecdc7e725b34e64b20e749519badc3ebd09aa5 started for 7310160
=== Container logs for 7310160 ===
  File "/snippet.py", line 10
    print source.format
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7310160 ===
[2025-10-29 17:05:21] INFO: Container 9c5688c382c84600fdda376991ecdc7e725b34e64b20e749519badc3ebd09aa5 has stopped
